# arbitrage_strategy

./: .gitignore  README.md  arbitrage.dockerfile  docker-compose.yml  pyproject.toml
arbitrage_strategy/: config.json  init_logging.py  main.py
arbitrage_strategy/src/: binance.py  exchange.py  ftx.py  strategy.py
