[tool.poetry]
name = "arbitrage-strategy"
version = "0.1.0"
description = ""
authors = ["lastway <lastway90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.6.4"
websockets = "^10.0"
uvloop = "^0.16.0"
aiohttp = "^3.8.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
